<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".ui.form.FormActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/form_title"
        style="@style/FizzBuzzTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/form_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/form_scroll"
        style="@style/FizzBuzzScroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/form_cta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/background_alpha"
                app:layout_constraintBottom_toBottomOf="@+id/form_second_multiple_input_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/form_limit_input_layout" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/form_number"
                style="@style/FizzBuzzSubtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/form_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/form_limit_input_layout"
                style="@style/FizzBuzzTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/form_limit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/form_number"
                app:suffixText="@string/form_limit_default">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/form_limit_input_edit"
                    style="@style/FizzBuzzTextInputEditNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/form_first_multiple_input_layout"
                style="@style/FizzBuzzTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/form_first_multiple"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/form_limit_input_layout"
                app:suffixText="@string/form_first_multiple_default">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/form_first_multiple_input_edit"
                    style="@style/FizzBuzzTextInputEditNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/form_second_multiple_input_layout"
                style="@style/FizzBuzzTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/form_second_multiple"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/form_first_multiple_input_layout"
                app:suffixText="@string/form_second_multiple_default">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/form_second_multiple_input_edit"
                    style="@style/FizzBuzzTextInputEditNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/background_alpha"
                app:layout_constraintBottom_toBottomOf="@+id/form_buzz_input_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/form_fizz_input_layout" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/form_text"
                style="@style/FizzBuzzSubtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/form_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/form_second_multiple_input_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/form_fizz_input_layout"
                style="@style/FizzBuzzTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/form_fizz"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/form_text"
                app:suffixText="@string/form_fizz_default">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/form_fizz_input_edit"
                    style="@style/FizzBuzzTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/form_buzz_input_layout"
                style="@style/FizzBuzzTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/form_buzz"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/form_fizz_input_layout"
                app:suffixText="@string/form_buzz_default">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/form_buzz_input_edit"
                    style="@style/FizzBuzzTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/form_cta"
        style="@style/FizzBuzzCta"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:text="@string/form_cta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_scroll" />

</androidx.constraintlayout.widget.ConstraintLayout>